<resources>
    <string name="app_name">AllFootball</string>
    <string name="time_value">17:00</string>
    <string name="team_name">Team</string>
    <string name="score_value">- : -</string>
    <string name="start_button">Start</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="string_search">Search</string>
    <string name="string_refresh">Refresh</string>
    <string name="string_feature_not_available_offline">"Currently not available"</string>
    <string name="string_no_data_available">"No data available"</string>
    <string name="string_today">Today</string>
    <string name="string_filter_title">"Filter"</string>
    <string name="string_live_filter">"Live games" </string>
    <string name="string_live_filter_description">"Show only currently ongoing games" </string>
    <string name="string_ok">"OK"</string>
    <string name="string_cancel">"Cancel" </string>
    <string name="string_filter_no_games">"No games on this day for the applied filter" </string>
    <string name="string_teams_profile">"Teams Profile" </string>
    <string name="string_official_channels">"Official Channels"</string>
    <string name="string_load_channels_error">"No channels available." </string>
    <string name="string_error_unknown">"Unknown error"</string>

    <string name="string_match_status_half_time">"HT"</string>
    <string name="string_match_status_1st_half">"1H"</string>
    <string name="string_match_status_2nd_half">"2H"</string>
    <string name="string_match_status_extra_time">"ET"</string>
    <string name="string_match_status_penalty_shootout">"P"</string>
    <string name="string_match_status_break">"Break"</string>
    <string name="string_match_status_interrupted">"Int."</string>
    <string name="string_match_status_suspended">"Susp."</string>
    <string name="string_match_status_postponed">"Postp."</string>
    <string name="string_match_status_delayed">"Delay"</string>
    <string name="string_match_status_result_after_extra_time">"AET"</string>
    <string name="string_match_status_result_after_penalty_shootout">"AP"</string>
    <string name="string_match_status_abandoned">"Aban."</string>
    <string name="string_match_status_full_time">"FT"</string>
    <string name="string_match_status_cancelled">"Cancl."</string>
    <string name="string_final_result_only">"FRO" </string>
    <string name="string_draw">"Draw"</string>
    <string name="string_which_team_will_win_game">"Which team will win the game?" </string>
    <string name="string_who_will_score_next_goal">"Which team will score the next goal?" </string>
</resources>
