<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/icon_actionbar_search"
        android:title="@string/string_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/icon_actionbar_funnel_off"
        android:title="@string/string_filter_title"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/icon_actionbar_refresh"
        android:title="@string/string_refresh"
        app:showAsAction="always"/>
</menu>