<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:weightSum="100">

    <TextView
        android:id="@+id/timeText"
        tools:text="@string/time_value"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:textColor="#000"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:textSize="12sp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/firstTeamName"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="25"
        tools:text="@string/team_name"
        android:textColor="#000"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center|right"
        android:textSize="12sp"
        android:padding="10dp"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="10"
        android:src="@drawable/team_logo_unknown"
        android:scaleType="fitCenter"/>

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:text="@string/score_value"
        android:textColor="#000"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:textSize="18sp"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="10"
        android:src="@drawable/team_logo_unknown"
        android:scaleType="fitCenter"/>

    <TextView
        android:id="@+id/secondTeamName"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="25"
        tools:text="@string/team_name"
        android:textColor="#000"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center|left"
        android:textSize="12sp"
        android:padding="10dp"
        tools:ignore="RtlHardcoded" />
</LinearLayout>